<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stars_rate_text">Оцените просмотренный материал</string>
    <string name="rate_button_text">Оценить</string>
    <string name="thanks_for_rate">Спасибо за ответ!</string>
    <string name="option_1">1</string>
    <string name="option_2">2</string>
    <string name="option_3">3</string>
    <string name="option_4">4</string>
    <string name="check">check</string>
    <string name="fill_blanks_button_text">Проверить</string>
</resources>