<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SelectOptionFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="Вопрос 1/1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="Первый вопрос"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/option_1_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_shape"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:id="@+id/option_1_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/option_1"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/option_1_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0.3"
            android:contentDescription="@string/check"
            android:src="@drawable/ic_baseline_check_24"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/option_1_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/option_2_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_shape"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:id="@+id/option_2_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/option_2"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/option_2_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0.3"
            android:contentDescription="@string/check"
            android:src="@drawable/ic_baseline_check_24"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/option_2_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/option_3_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_shape"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:id="@+id/option_3_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/option_3"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/option_3_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0.3"
            android:contentDescription="@string/check"
            android:src="@drawable/ic_baseline_check_24"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/option_3_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/option_4_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_shape"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:id="@+id/option_4_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/option_4"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/option_4_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0.3"
            android:contentDescription="@string/check"
            android:src="@drawable/ic_baseline_check_24"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/option_4_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="invisible" />
    </LinearLayout>
</LinearLayout>